# Zkfhed

./: FeeManagement.sol  PowerManagement.sol  README.md  RegistrationContract.sol  TaskManagement.sol  env  main.rs
Blockchain_Query/: Cargo.toml  README.md
Blockchain_Query/src/: main.rs
Data_Proof/: README.md  twitter_dm_proof.json
FL_ZKVM/NN/methods/guest/src/: main.rs
FL_ZKVM/SVM_DP/methods/guest/: Cargo.toml
FL_ZKVM/SVM_DP/methods/guest/src/: main.rs
FL_ZKVM/SVM_SGD/host/: Cargo.toml
FL_zkVM/: README.md
FL_zkVM/LR/host/src/: main.rs
FL_zkVM/LR/methods/guest/: Cargo.toml
FL_zkVM/LR/methods/guest/src/: main.rs
FL_zkVM/NN/host/src/: main.rs
FL_zkVM/NN/methods/guest/src/: main.rs
FL_zkVM/SVM/host/src/: main.rs
FL_zkVM/SVM/methods/guest/src/: main.rs
FL_zkVM/SVM_SGD/host/src/: main.rs
FL_zkVM/SVM_SGD/methods/guest/src/: main.rs
Privacy_Delegation_Mechanism/: README.md
Privacy_Delegation_Mechanism/ZKVM+FHE+NN/methods/guest/src/: main.rs
Twitter_Data_Proof/: env  twitter_dm.rs
contracts/: CrossConsensus  PowerManagement.sol  RegistrationContract.sol  TaskManagement.sol
contracts_V0.1.0/: FeeManagement.sol  PowerManagement.sol  RegistrationContract.sol  TaskManagement.sol
