[package]
name = "method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "0.19.1", default-features = false, features = [ "std" ] }
polynomial-ring = "0.5.0"
num = " * "
rand = "0.8.4"
num-traits = "0.2.15"  
ndarray = "0.15"
